# edadb

./: .gitmodules  CMakeLists.txt  README.md  README.me  TODO
build copy/: Makefile
build_copy/: .ninja_deps  .ninja_log  expand18_part.cpp  make_output.txt  sqlite.db-journal
build_copy/.cmake/api/v1/reply/: cache-v2-781620f87200ec73a157.json  codemodel-v2-49b0dc9861c57dc39c34.json
demo/: CMakeLists.txt  boost.cpp  demo1.cpp  ext.cpp  full.cpp  simple.cpp  slot.cpp  vec.cpp
include/: edadb.h
include/edadb/: Config.h  Cpp2DbType.h  Cpp2SqlType.h  Cpp2SqlTypeTrait.h  DbBackendType.h  DbManager.h  DbMap.h  DbMapAll.h  DbMapBase.h  DbMapDbStmtOp.h  DbMapOperation.h  DbMapReader.h  DbMapWriter.h  DbStatement.h  MacroHelper.h  Shadow.h  Singleton.h  SqlStatement.h  SqlType.h  Table4Class.h  TraitUtils.h  TypeInfoTrait.h  TypeMetaData.h  TypeStack.h  VecMetaData.h  edadb.h
include/edadb/backend/sqlite/: DbManager4Sqlite.h  DbStatement4Sqlite.h  Macro4Sqlite.h  SqlStatement4Sqlite.h
include/lib/edadb/: diff_between_19_and_20.txt  diff_between_20_and_21.txt  diff_between_old_19_and_17.txt  edadb copy 2.hpp  edadb copy.hpp  edadb.hpp  edadbTest11.hpp  edadbTest12.hpp  edadbTest13.hpp  edadbTest14.hpp  edadbTest15.hpp  edadbTest16.hpp  edadbTest17.hpp  edadbTest18 copy.hpp  edadbTest18.hpp  edadbTest19 copy.hpp  edadbTest19.hpp  edadbTest2.hpp  edadbTest20.hpp  edadbTest21.hpp  edadbTest3.hpp  edadbTest4.hpp  edadbTest5 copy.hpp  edadbTest5.hpp  edadbTest7 save.hpp  edadbTest7.hpp  edadbTest8.hpp  edadbTest9.hpp  edadbTestMacro.hpp  ppExpand.txt  ppexpand.cpp
include/lib/edadb/impl/: CppTypeToSQLString.hpp  DbBackend.hpp  DbLogger.hpp  EdadbCppTypeToSQLString.hpp  SimpleOID.hpp
include/lib/utils/: Singleton.hpp
soci_demo/: CMakeLists.txt  CMakeLists_copy.txt
soci_demo/include/lib/edadb/: edadb.hpp
soci_demo/include/lib/edadb/impl/: EdadbDbBackend.hpp  orm.hpp
soci_demo/include/lib/utils/: MD5.hpp
soci_demo/src/: BoostHeaders.cpp  Bun.cpp  Generate.cpp  cpptypetodbtype.hpp  demo.cpp  macro.hpp  t_soci.cpp  t_soci_read.cpp
src/: CMakeLists.txt  QueryExample.cpp  case.cpp  edadb.cpp  edadbTest1.cpp  edadbTest10.cpp  edadbTest11.cpp  edadbTest12.cpp  edadbTest13.cpp  edadbTest14.cpp  edadbTest15.cpp  edadbTest16.cpp  edadbTest17.cpp  edadbTest18.cpp  edadbTest19.cpp  edadbTest2.cpp  edadbTest20.cpp  edadbTest3.cpp  edadbTest4.cpp  edadbTest5.cpp  edadbTest6.cpp  edadbTest7.cpp  edadbTest8.cpp  edadbTest9 copy.cpp  edadbTest9.cpp  iEDA_data.hpp  test.cpp  test_polygon.cpp
src/core/: CMakeLists.txt  DbMap.cpp  edadb.cpp  main.cpp
src/core/backend/: CMakeLists.txt
src/core/backend/sqlite/: CMakeLists.txt
src/edadb/: CMakeLists.txt  ConvertType.hpp  Cpp2DbType.hpp  CppTypeToDbType.hpp  CppTypeToSqliteType.hpp  DbBackendType.hpp  DbManager.hpp  DbMap.hpp  DbStatement.h  DbType.hpp  ObjectRelationMapper.hpp  SqlStatement.hpp  SqlType.hpp  Sqlite3Manager.hpp  Table4Class.hpp  Test.hpp  TypeMetaData.hpp  edadb.hpp  edadb.hpp.todo  func.h  func_cpp_var.cpp  func_sqlite_api.cpp  func_sqlite_lock.cpp  func_sqlite_stmt.cpp  intfc.cpp  intfc.h  intfc_core.cpp  intfc_duckdb.cpp  intfc_sugar.cpp  main.cpp  perf.cpp  perf.h  perf_core.cpp  perf_core_val_int.cpp  perf_core_val_str.cpp  perf_core_vec_int.cpp  perf_core_vec_str.cpp  perf_int.hpp  perf_sqlite.cpp  perf_sqlite_int.cpp  (+13 more)
src/edadb/backend/: CMakeLists.txt
src/edadb/backend/sqlite/: CMakeLists.txt  DbTypeSqlite.hpp
